[tool.poetry]
name = "cipher_hg2589"
version = "0.1.0"
description = "project directory structure created by cookiecutter"
authors = ["Angela Gu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
